Fixed: Ticket title overlaps with actions (bug#13430).

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Default.css
@@ -660,6 +660,19 @@ form select.Error {
 }
 
 /**
+ * @note    Use the class InvisibleText to hide text from the screen,
+ *          while it is still recognized and read by screen readers.
+ */
+.InvisibleText {
+    width: 0;
+    height: 0;
+    display: inline-block;
+    text-indent: -9999px;
+    white-space: nowrap;
+    position: absolute !important;
+}
+
+/**
  * @subsection  Spacings
  */
 .Spacing {
